# mudae-sniper

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
src/: handler.rs  logger.rs  main.rs  settings.rs  sniper.rs  snipers.rs  tasks.rs  utils.rs
src/commands/: context.rs  mod.rs  scheduler.rs  types.rs
src/entities/: badge.rs  instance.rs  kakera.rs  mod.rs  statistics.rs
src/models/: kakera.rs  mod.rs
src/settings/: client_config.rs  mod.rs  mudae_config.rs  sniper_confg.rs  sniper_config.rs
src/snipers/: errors.rs  mod.rs  sniper.rs  statistics.rs
src/tasks/: autoroll.rs  daily_claimer.rs  daily_kakera_claimer.rs  mod.rs
