[package]
name = "mudae-sniper"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
chrono-tz = "0.10.4"
dashmap = "6.1.0"
dotenv = "0.15.0"
regex = "1.11.1"
reqwest = {version = "0.12.22", features = ["json"]}
serde_json = "1.0.142"
serenity_self = {version = "0.13.3", features = ["collector", "cache"]}
tokio = {version = "1.47.1", features = ["full"]}
